--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2713,7 +2713,7 @@
   image_description: Photo of Johanna Del Pino
   position: Software Engineer
   bio: >
-    Johanna's a full-stack engineer with over nine years of experience in the industry. Her main focus is on web applications and front-end technologies. Her exposure to leadership roles has given her the skills to successfully engage in design, planning, and delivery of highly collaborative projects. She has worked for different government entities like the U.S. Department of Veterans Affairs and Centers for Medicare & Medicaid Services. Johanna lives in Pennsylvania.
+    Johanna's a full-stack engineer with over nine years of experience in the industry. Her main focus is on web applications and front-end technologies. She has worked for different government entities like the U.S. Department of Veterans Affairs and Centers for Medicare & Medicaid Services. Johanna lives in Pennsylvania.
   active: true
   socials:
     - name: LinkedIn
