--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2831,7 +2831,7 @@
   image_description: Illustration of Steven Speck
   position: Software Engineering Apprentice
   bio: >
-    Steven's a software engineering apprentice functioning who holds equal passions for machine learning and creating useful tools for others. Coming from Northeast Ohio, he attended MIT, where he majored in Computation and Cognition. Steven lives in California.
+    Steven's a software engineering apprentice who holds equal passions for machine learning and creating useful tools for others. Coming from Northeast Ohio, he attended MIT, where he majored in Computation and Cognition. Steven lives in California.
   active: true
   socials:
     - name: LinkedIn
