--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2730,7 +2730,7 @@
   image_description: Illustration of Bobby Wells
   position: Data Engineering Apprentice
   bio: >
-    Bobby's an engineer and data nerd who has a passion for working with tech that actively makes the world a better place. In 2021, he served as a Civic Digital Fellow at the Census Bureau and graduated from Tufts University with a joint degree in Computer Science and Science, Technology & Society studies with a focus in mathematics and modeling. Bobby lives in Colorado.
+    Bobby's an engineer and data nerd who has a passion for working with tech that actively makes the world a better place. In 2021, he served as a Civic Digital Fellow at the Census Bureau and graduated from Tufts University. Bobby lives in Colorado.
   active: true
   socials:
     - name: LinkedIn
