--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2768,7 +2768,7 @@
   image_description: Illustration of Camille Villa
   position: Software Engineer
   bio: >
-    Camille's a full-stack software engineer that loves working with collaborative and service-oriented teams. She previously built open source software and managed developer communities for libraries, archives, and museums at Stanford University. Camille lives in California.
+    Camille's a full-stack software engineer who loves working with collaborative and service-oriented teams. She previously built open source software and managed developer communities for libraries, archives, and museums at Stanford University. Camille lives in California.
   active: true
   socials:
     - name: LinkedIn
