--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2709,7 +2709,7 @@
   full_name: Johanna Del Pino
   short_name: J. Del Pino
   profile_path: /company/about/#johanna-delpino
-  image: /img/people/johanna-delpino.jpg
+  image: /img/people/johanna-delpino.png
   image_description: Photo of Johanna Del Pino
   position: Software Engineer
   bio: >
