--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2810,7 +2810,7 @@
   image_description: Photo of Ann Millspaugh
   position: Staff Product Manager
   bio: >
-    Ann's a product manager who loves to solve customer problems. As a former engineer, she likes to understand the details of technical products and translate technical concepts to all stakeholders. Ann specializes in productizing and scaling APIs and data pipelines. Ann lives California. 
+    Ann's a product manager who loves to solve customer problems. As a former engineer, she likes to understand the details of technical products and translate technical concepts to all stakeholders. Ann specializes in productizing and scaling APIs and data pipelines. Ann lives in California. 
   active: true
   socials:
     - name: LinkedIn
