--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2848,7 +2848,7 @@
   full_name: Lina Roth
   short_name: L. Roth
   profile_path: /company/about/#lina-roth
-  image: /img/people/lina-roth.png
+  image: /img/people/lina-roth.jpg
   image_description: Illustration of Lina Roth
   position: Staff Software Engineer
   bio: >
