--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2849,7 +2849,7 @@
   short_name: L. Roth
   profile_path: /company/about/#lina-roth
   image: /img/people/lina-roth.jpg
-  image_description: Illustration of Lina Roth
+  image_description: Photo of Lina Roth
   position: Staff Software Engineer
   bio: >
     Lina's a software engineer with experience in cloud computing and DevOps, along with building APIs and robust applications. For nearly seven years, she worked with the Department of Veterans Affairs developing benefit management software. She enjoys making the world a more inclusive space for everyone. Lina lives in South Carolina.
