--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2900,7 +2900,7 @@
   profile_path: /company/about/#michelle-li
   image: /img/people/michelle-li.jpg
   image_description: Photo of Michelle Li
-  position: Product Designer
+  position: Product Designer Intern
   bio: >
     Michelle's a product designer originally from the San Francisco Bay Area. She cares deeply about building positive relationships between people and technology. Previously, she was a Civic Digital Fellow at the National Institutes of Health. Michelle lives in New York. 
   active: true
@@ -2913,7 +2913,3 @@
       link: https://michellemli.myportfolio.com/work
       link_description: Michelle's Personal Website
       fa_icon_name: home
-
-
-
-
