--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1135,7 +1135,7 @@
   profile_path: /company/about/#zack-gehin
   image: /img/people/zack-gehin.jpg
   image_description: Photo of Zack Gehin
-  position: Senior Product Designer
+  position: Staff Product Designer
   bio: >
     Zack's certified in UX by the Nielsen Norman Group and specializes in complex
     application design. His entrepreneurial spirit adds a unique approach towards
@@ -1998,7 +1998,7 @@
   profile_path: /company/about/#nathan-carter
   image: /img/people/nathan-carter.jpg
   image_description: Photo of Nathan Carter
-  position: Software Engineer
+  position: Senior Software Engineer
   bio: >
     Nathan's a software engineer driven by building digital services for public good. Prior to becoming an engineer, he ran his own bakery. Nathan lives in North Carolina.
   active: true
@@ -2344,7 +2344,7 @@
   profile_path: /company/about/#sarah-george-hager
   image: /img/people/sarah-george-hager.jpg
   image_description: Photo of Sarah George Hager
-  position: Software Engineer
+  position: Senior Software Engineer
   bio: >
     George’s an engineer who enjoys building software that makes life easier, more equitable, and delightful. She specializes in full-stack software engineering and test-driven development, and loves developing best practices on engineering teams. George previously worked with the U.S. Air Force's Kessel Run program. She lives in Massachusetts.
   active: true
