--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,7 +8,7 @@
 
 # Categories:
 # Research & Design, Product & Delivery, Engineering, Data,
-# Procurement, Transformation, Business Strategy & Operations
+# Transformation & Procurement, Business Strategy & Operations
 
 - title: Software Engineer
   url: https://skylight.workable.com/jobs/1083190
