--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1252,7 +1252,7 @@
     Charlye loves to solve complex problems. As a former software and data engineer, she now
     specializes in service design and product management and is certified in UX by the Nielsen Norman
     Group. Charlye lives in Texas.
-  active: true
+  active: false
   order: 290
   socials:
     - name: LinkedIn
