--- a/_data/ditap.yml
+++ b/_data/ditap.yml
@@ -14,7 +14,7 @@ executive:
   primary_registration_link: https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308
   info:
     - class: 2
-      run_date: Thu, Nov 17, 9:00 am – 5:00 pm ET
+      run_date: Thu, Nov 16, 2023, 9:00 am – 5:00 pm ET
       description:
       location: Online
       instructors: Chris Cairns, Dan Levenson, Robert Read, and Leslie Garner Franklin
