--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2048,7 +2048,7 @@
   image_description: Photo of Nick Blake
   position: Product Designer
   bio: >
-    Nick's a product designer, who's studying psychology and human-computer interaction at the Washington University in St. Louis. They most recently worked as a Civic Digital Fellow at the U.S. Citizenship and Immigration Services. Nick lives in Missouri.
+    Nick's a multidisciplinary designer and researcher. Nick’s process is informed by cross-functional collaboration and research. He's passionate about facilitating connections between and within communities. Nick recently graduated from Washington University in St. Louis. Nick lives in New York.
   active: true
   order: 530
   socials:
