--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
 
 jobs:
   build_and_deploy:
@@ -24,7 +25,7 @@ jobs:
       - name: Sleep for 60 seconds
         uses: jakejarvis/wait-action@master
         with:
-          time: '60s'
+          time: "60s"
 
       - name: Lighthouse CI Action
         uses: treosh/lighthouse-ci-action@v2
