--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,13 +48,15 @@ jobs:
         id: pages
         uses: actions/configure-pages@v2
       - name: Build with Jekyll
-        # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
+        with:
+          # The path to the directory to upload
+          path: ./build
 
   # Deployment job
   deploy:
